login register done

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 li .active {
   @apply text-secondary;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  @apply bg-gradient-to-r from-[#002c6a] via-[#00419d] to-[#002c6a];
 }
